--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "dependencies": {},
+  "dependencies": { "@google-cloud/bigquery": "^7.7.1" },
   "devDependencies": {
     "@types/bun": "^1.1.3",
     "@types/node": "^20.13.0"
