--- a/.github/workflows/etl.yml
+++ b/.github/workflows/etl.yml
@@ -21,5 +21,9 @@ jobs:
       - id: "gcloud"
         name: "gcloud"
         run: |-
+          gcloud config set project dtinth-storage-space
           gcloud auth login --brief --cred-file="${{ steps.auth.outputs.credentials_file_path }}"
           gcloud services list
+      - uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: 1.1.12
