--- a/.github/workflows/etl.yml
+++ b/.github/workflows/etl.yml
@@ -21,8 +21,7 @@ jobs:
       - id: "gcloud"
         name: "gcloud"
         run: |-
-          gcloud auth login --brief --cred-file="${{ steps.auth.outputs.credentials_file_path }}"
-          gcloud config set project dtinth-storage-space
+          gcloud auth login --brief --cred-file="${{ steps.auth.outputs.credentials_file_path }}" --project=dtinth-storage-space
           gcloud services list
       - uses: oven-sh/setup-bun@v1
         with:
