--- a/.github/workflows/etl.yml
+++ b/.github/workflows/etl.yml
@@ -9,15 +9,13 @@ jobs:
       id-token: write
       contents: read
     runs-on: ubuntu-latest
-    env:
-      GOOGLE_CLOUD_PROJECT: dtinth-storage-space
     steps:
       - uses: actions/checkout@v4
       - id: "auth"
         name: "Authenticate to GCP"
-        uses: "google-github-actions/auth@v0.3.1"
+        uses: "google-github-actions/auth@v2"
         with:
-          create_credentials_file: "true"
+          project_id: "dtinth-storage-space"
           workload_identity_provider: "https://iam.googleapis.com/projects/1061748385198/locations/global/workloadIdentityPools/github-actions/providers/github-actions"
           service_account: "jamulus-archive@dtinth-storage-space.iam.gserviceaccount.com"
       - id: "gcloud"
