--- a/.github/workflows/etl.yml
+++ b/.github/workflows/etl.yml
@@ -21,7 +21,8 @@ jobs:
         name: "gcloud"
         run: |-
           gcloud auth login --brief --cred-file="${{ steps.auth.outputs.credentials_file_path }}"
-          gcloud services list
       - uses: oven-sh/setup-bun@v1
         with:
           bun-version: 1.1.12
+      - run: bun install
+      - run: bun src/load.ts 2023-08-07
