--- a/.github/workflows/etl.yml
+++ b/.github/workflows/etl.yml
@@ -1,8 +1,8 @@
 name: ETL
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: "59 5 * * *"
+  workflow_dispatch:
 jobs:
   etl:
     permissions:
